[gd_scene load_steps=10 format=2]

[ext_resource path="res://IMG/fondo_escena/fondo nivel 1.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Main.tscn" type="PackedScene" id=2]
[ext_resource path="res://Escenas/Mundo1.gd" type="Script" id=3]
[ext_resource path="res://Escenas/fondo.gd" type="Script" id=4]
[ext_resource path="res://Escenas/Menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://BGM/SonidosVideojuegoRetro/03FondoMusical.mp3" type="AudioStream" id=6]
[ext_resource path="res://Escenas/nivel2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Escenas/nivel1.tscn" type="PackedScene" id=8]
[ext_resource path="res://Escenas/portal.tscn" type="PackedScene" id=9]

[node name="Mundo1" type="Node2D"]
script = ExtResource( 3 )
nivel1 = ExtResource( 8 )
nivel2 = ExtResource( 7 )

[node name="fondo" type="Sprite" parent="."]
position = Vector2( 12.679, -14.2223 )
scale = Vector2( 1.50954, 0.969166 )
texture = ExtResource( 1 )
centered = false
script = ExtResource( 4 )

[node name="fondo nivel 1" type="Sprite" parent="fondo"]
position = Vector2( 2999.36, 602.199 )
scale = Vector2( 1.00985, 0.99983 )
texture = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 321.154, 360.413 )
scale = Vector2( 1.5, 1.5 )

[node name="inicioatake" type="Timer" parent="."]
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="InicioTimer" type="Timer" parent="."]

[node name="atak_position" type="Position2D" parent="."]
position = Vector2( 1886.04, 405.852 )

[node name="Menu" parent="." instance=ExtResource( 5 )]

[node name="posini" type="Position2D" parent="."]
position = Vector2( 134.543, 413.721 )

[node name="disparo" type="AudioStreamPlayer" parent="."]

[node name="audio_intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="portal" parent="." instance=ExtResource( 9 )]
position = Vector2( 1951.93, 573.876 )

[node name="atack_position2" type="Position2D" parent="."]
position = Vector2( 1831.4, 573.981 )

[node name="inicioatake2" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="inicioatake" to="." method="_on_inicioatake_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]
[connection signal="iniciar" from="Menu" to="." method="nuevo_juego"]
[connection signal="timeout" from="inicioatake2" to="." method="_on_inicioatake2_timeout"]
